<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home"
            />

        <item
            android:id="@+id/nav_tools"
            android:title="@string/tools"
            android:icon="@drawable/tools"/>

        <item
            android:id="@+id/nav_rutinas"
            android:title="@string/rutinas"
            android:icon="@drawable/exercise"
            />


    </group>

    <item android:title="Perfil">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_perfil"
                    android:title="@string/perfil"
                    android:icon="@drawable/profile"/>

                <item
                    android:id="@+id/nav_progress"
                    android:title="@string/progreso"
                    android:icon="@drawable/progress"/>

                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/exit"/>


            </group>


        </menu>


    </item>

    <item android:title="Progreso">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_add_progress"
                    android:title="@string/add_progress"
                    android:icon="@drawable/progress"/>

                <item
                    android:id="@+id/nav_peso"
                    android:title="@string/add_peso"
                    android:icon="@drawable/peso"/>

                <item
                    android:id="@+id/nav_especific"
                    android:title="@string/add_especific_progress"
                    android:icon="@drawable/metro"/>


            </group>


        </menu>


    </item>

</menu>